# fluid-simulation-rust

./: .gitignore  Cargo.toml  README.md  app.css  build.rs  build.sh  deploy.sh  index.html
crates/fluid-sim/: Cargo.toml
crates/fluid-sim/src/: constants.rs  lib.rs  utils.rs
crates/web/: Cargo.toml  build.rs  build.sh  index.html
crates/web/src/: constants.rs  lib.rs  resources.rs  state.rs  universe.rs  utility.rs  world.rs
crates/web/src/components/: menu.rs
crates/web/src/components/canvas/: canvas.css  canvas_view.rs
crates/web/src/components/menu/: config.rs  menu_view.rs  range.rs
crates/web/src/components/menu/config/: config.css  config_constants.rs  config_view.rs
crates/web/src/components/menu/hamburger/: hamburger_view.rs
crates/web/src/components/menu/range/: range.css  range_view.rs
crates/web/src/pages/: home.rs
crates/web/src/pages/home/: home.css  home_view.rs
crates/web/src/utility/: constants.rs  enums.rs  functions.rs  structs.rs
crates/web/src/utility/webgl/: constants.rs  functions.rs  mod.rs  structs.rs
src/: components.rs  lib.rs  resources.rs  simulation.rs  state.rs  world.rs
src/components/: canvas.rs  menu.rs
src/components/menu/: config.rs  hamburger.rs  menu.css  menu_view.rs  range.rs
src/components/menu/config/: config.css  config_constants.rs  config_view.rs
src/components/menu/hamburger/: hamburger.css  hamburger_view.rs
src/pages/: home.rs
src/pages/home/: home_view.rs
