[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
percy-dom = "0.7"
app-world = "0.2.0"
num-traits = "0.2"
css_mod = "0.1.5"
console_error_panic_hook = "0.1.7"
fluid-sim = { path = "../fluid-sim" }

[build-dependencies]
css_mod = "0.1.5"

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "MouseEvent",
    "Window",
    "console"
]